--- a/WEB/Views/Empleados/_modal.cshtml
+++ b/WEB/Views/Empleados/_modal.cshtml
@@ -13,7 +13,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="formularioAgregar" action="@Url.Action("Agregar","Empleados")" method="post" enctype="multipart/form-data" class="user">
+                <form id="formularioGuardar" action="@Url.Action("Guardar","Empleados")" method="post" enctype="multipart/form-data" class="user">
+                    <input type="text" asp-for="EmpleadoID" class="form-control rounded-3 border" name="EmpleadoID" id="EmpleadoID" hidden />
                     <div class="row">
                         <div class="col-sm-6 mb-3">
                             <label for="Nombre" class="form-label">Nombre:</label>
@@ -28,7 +29,7 @@
                         <div class="col-sm-6 mb-3">
                             <label for="PerfilID" class="form-label">Perfil:</label>
                             <select asp-for="PerfilID" id="PerfilID" name="PerfilID" class="form-select" asp-items="@(new SelectList(ListaPerfiles, "PerfilID", "NombrePerfil"))" required>
-                                <option selected disabled>Seleccione una opción</option>
+                                <option value="0">Seleccione una opción</option>
                             </select>
                         </div>
                         <div class="col-sm-6 mb-3">
@@ -39,13 +40,9 @@
                     <div class="row">
                         <div class="col-sm-6 mb-3">
                             <label for="SupervisorID" class="form-label">Supervisor:</label>
-                            <select asp-for="SupervisorID" id="SupervisorID" name="SupervisorID" class="form-select" asp-items="@(new SelectList(ListaSupervisores, "EmpleadoID", "Nombre"))" required>
-                                <option selected disabled>Seleccione una opción</option>
+                            <select asp-for="SupervisorID" id="SupervisorID" name="SupervisorID" class="form-select" asp-items="@(new SelectList(ListaSupervisores, "EmpleadoID", "Nombre"))">
+                                <option value="0">Seleccione una opción</option>
                             </select>
-                        </div>
-                        <div class="col-sm-6 mb-3">
-                            <label for="Salario" class="form-label">Salario:</label>
-                            <input type="number" asp-for="Salario" class="form-control rounded-3 border" name="Salario" id="Salario" min="0" step="1" required />
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -56,3 +53,18 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $('#formularioGuardar').on('submit', function (event) {
+        if (validateForm('formularioGuardar')) {
+            event.preventDefault();
+            const dataAdd = {
+                urlPost: '@Url.Action("Guardar", "Empleados")',
+                formData: $('#formularioGuardar').serialize(),
+                funcion: redirectResponse
+            };
+            GuardarRegistro(dataAdd);
+        } else {
+            return;
+        }
+    });
+</script>
