--- a/WEB/Views/Inicio/Index.cshtml
+++ b/WEB/Views/Inicio/Index.cshtml
@@ -32,20 +32,21 @@
     <div id="modalForm"></div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/modales.js"></script>
     <script>
         function mostrarModal(btn) {
-            mostrarInfoModal('@Url.Action("ObtenerContenidoModal", "Inicio")', btn, 'modalForm', 'registerModal');
-        }
-        $('#formIngreso').on('submit', function (event) {
-            event.preventDefault();
-            window.location.href = '@Url.Action("Index", "Home")';
-        });
+                mostrarInfoModal('@Url.Action("ObtenerContenidoModal", "Inicio")', btn, 'modalForm', 'registerModal');
+                }
+                $('#formIngreso').on('submit', function (event) {
+                    event.preventDefault();
+                    window.location.href = '@Url.Action("Index", "Home")';
+                });
 
-        $('#formRegistro').on('submit', function (event) {
-            event.preventDefault();
-            window.location.href = '@Url.Action("Index", "Home")';
-        });
+                $('#formRegistro').on('submit', function (event) {
+                    event.preventDefault();
+                    window.location.href = '@Url.Action("Index", "Home")';
+                });
     </script>
 </body>
 </html>
