--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -52,7 +52,9 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/modales.js"></script>
+    <script src="~/js/utils.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
