--- a/WEB/Views/Inicio/Index.cshtml
+++ b/WEB/Views/Inicio/Index.cshtml
@@ -16,12 +16,12 @@
             <h2 class="text-center">Iniciar Sesión</h2>
             <form id="formIngreso">
                 <div class="mb-3">
-                    <label for="usuario" class="form-label">Usuario</label>
-                    <input type="text" class="form-control" id="usuario" placeholder="Ingresa tu usuario" required>
+                    <label for="usuario" class="form-label">Correo:</label>
+                    <input type="text" class="form-control" id="Correo" name="Correo" placeholder="Ingresa tu correo" required>
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
+                    <label for="password" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="Contrasena" name="Contrasena" placeholder="Ingresa tu contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
             </form>
@@ -34,19 +34,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/modales.js"></script>
+    <script src="~/js/utils.js"></script>
     <script>
         function mostrarModal(btn) {
-                mostrarInfoModal('@Url.Action("ObtenerContenidoModal", "Inicio")', btn, 'modalForm', 'registerModal');
-                }
-                $('#formIngreso').on('submit', function (event) {
-                    event.preventDefault();
-                    window.location.href = '@Url.Action("Index", "Home")';
-                });
+            mostrarInfoModal('@Url.Action("ObtenerContenidoModal", "Inicio")', btn, 'modalForm', 'registerModal');
+        }
 
-                $('#formRegistro').on('submit', function (event) {
-                    event.preventDefault();
+        $('#formIngreso').on('submit', function (event) {
+            event.preventDefault();
+            $.ajax({
+                url: '@Url.Action("Ingresar", "Inicio")',
+                method: 'POST',
+                data: $('#formIngreso').serialize(),
+                success: function (response) {
+                    if (response.success) {
                     window.location.href = '@Url.Action("Index", "Home")';
-                });
+                    } else {
+                        swalWithBootstrapButtons2.fire({
+                            title: "Error",
+                            text: response.message,
+                            icon: "error",
+                            confirmButtonText: 'Cerrar',
+                        });
+                    }
+                },
+                error: function (response) {
+                    swalWithBootstrapButtons2.fire({
+                        title: "Error",
+                        text: response.message,
+                        icon: "error",
+                        confirmButtonText: 'Cerrar',
+                    });
+                }
+            });
+        });
+
+        function redirectResponse(){
+            window.location.href = '@Url.Action("Index", "Inicio")';
+        }
     </script>
 </body>
 </html>
