--- a/WEB/Views/Inicio/_modal.cshtml
+++ b/WEB/Views/Inicio/_modal.cshtml
@@ -14,26 +14,30 @@
                 <form id="formRegistro">
                     <div class="mb-3">
                         <label for="cedula" class="form-label">Cédula</label>
-                        <input type="text" class="form-control" id="cedula" placeholder="Ingresa tu cédula" required>
+                        <input type="text" class="form-control" id="cedula" asp-for="Cedula" name="Cedula" placeholder="Ingresa tu cédula" required>
                     </div>
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre Completo</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre completo" required>
+                        <input type="text" class="form-control" id="nombre" asp-for="Nombre" name="Nombre" placeholder="Ingresa tu nombre completo" required>
                     </div>
                     <div class="mb-3">
                         <label for="registroPassword" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="registroPassword" placeholder="Crea una contraseña" required>
+                        <input type="password" class="form-control" id="registroPassword" asp-for="Contrasena" name="Contrasena" placeholder="Crea una contraseña" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="correo" class="form-label">Correo</label>
+                        <input type="text" class="form-control" id="correo" asp-for="Correo" name="Correo" placeholder="Ingresa un correo" required>
                     </div>
                     <div class="mb-3">
                         <label for="perfil" class="form-label">Perfil</label>
-                        <select class="form-select" id="perfil" required asp-items="@(new SelectList(ListaPerfiles, "PerfilID", "NombrePerfil"))">
-                            <option selected disabled>Seleccione una opción</option>
+                        <select class="form-select" id="perfil" required asp-for="PerfilID" name="PerfilID" asp-items="@(new SelectList(ListaPerfiles, "PerfilID", "NombrePerfil"))">
+                            <option value="0">Seleccione una opción</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="tienda" class="form-label">Tienda</label>
-                        <select class="form-select" id="tienda" required asp-items="@(new SelectList(ListaTiendas, "TiendaID", "NombreTienda"))">
-                            <option selected disabled>Seleccione una opción</option>
+                        <select class="form-select" id="tienda" required asp-for="TiendaID" name="TiendaID" asp-items="@(new SelectList(ListaTiendas, "TiendaID", "NombreTienda"))">
+                            <option value="0">Seleccione una opción</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Registrar</button>
@@ -42,3 +46,18 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $('#formRegistro').on('submit', function (event) {
+        if (validateForm('formRegistro')) {
+            event.preventDefault();
+            const dataAdd = {
+                urlPost: '@Url.Action("RegistrarUsuario", "Inicio")',
+                formData: $('#formRegistro').serialize(),
+                funcion: redirectResponse
+            };
+            GuardarRegistro(dataAdd);
+        } else {
+            return;
+        }
+    });
+</script>
