--- a/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Permisos" asp-action="Index">Permisos</a>
                         </li>
                     </ul>
+                    <a class="btn btn-primary ms-auto" href="@Url.Action("CerrarSesion", "Inicio")">Cerrar sesión</a>
                 </div>
             </div>
         </nav>
