--- a/WEB/Views/Empleados/_modal.cshtml
+++ b/WEB/Views/Empleados/_modal.cshtml
@@ -15,6 +15,8 @@
             <div class="modal-body">
                 <form id="formularioGuardar" action="@Url.Action("Guardar","Empleados")" method="post" enctype="multipart/form-data" class="user">
                     <input type="text" asp-for="EmpleadoID" class="form-control rounded-3 border" name="EmpleadoID" id="EmpleadoID" hidden />
+                    <input type="text" asp-for="Fecha" class="form-control rounded-3 border" name="Fecha" id="Fecha" hidden />
+
                     <div class="row">
                         <div class="col-sm-6 mb-3">
                             <label for="Nombre" class="form-label">Nombre:</label>
